[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
parse-display = "0.8.2"
rayon = "1.8.0"
strum = { version = "0.25.0", features = ["strum_macros"] }
strum_macros = "0.25.3"
